# Modern-C-

homework1/: problem2.cpp
homework1/data/: commands.sh  new.txt
homework2/igg_image/: CMakeLists.txt
homework2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
